# skolab-webadmin

./: AUTHORS  ChangeLog  ChangeLog.kolab-webadmin.until-2010  Makefile.am  Makefile.in  NEWS  configure  configure.ac  kolab-webadmin.spec  kolab-webadmin.spec.in
contrib/: update-locale
data/locale/: LINGUAS  Makefile.am  extract_messages  messages.pot
data/locale/af/LC_MESSAGES/: messages.po
data/locale/am/LC_MESSAGES/: messages.po
data/locale/an/LC_MESSAGES/: messages.po
data/locale/ar/LC_MESSAGES/: messages.po
data/locale/ast/LC_MESSAGES/: messages.po
data/locale/az/LC_MESSAGES/: messages.po
data/locale/be/LC_MESSAGES/: messages.po
data/locale/bem/LC_MESSAGES/: messages.po
data/locale/bg/LC_MESSAGES/: messages.po
data/locale/bn/LC_MESSAGES/: messages.po
data/locale/bo/LC_MESSAGES/: messages.po
data/locale/br/LC_MESSAGES/: messages.po
data/locale/bs/LC_MESSAGES/: messages.po
data/locale/ca/LC_MESSAGES/: messages.po
data/locale/ca@valencia/LC_MESSAGES/: messages.po
data/locale/ce/LC_MESSAGES/: messages.po
data/locale/ckb/LC_MESSAGES/: messages.po
data/locale/co/LC_MESSAGES/: messages.po
data/locale/crh/LC_MESSAGES/: messages.po
data/locale/cs/LC_MESSAGES/: messages.po
data/locale/cv/LC_MESSAGES/: messages.po
data/locale/cy/LC_MESSAGES/: messages.po
data/locale/da/LC_MESSAGES/: messages.po
data/locale/de/LC_MESSAGES/: messages.mo  messages.po  messages.po~
data/locale/el/LC_MESSAGES/: messages.po
data/locale/en_AU/LC_MESSAGES/: messages.po
data/locale/en_CA/LC_MESSAGES/: messages.po
data/locale/en_GB/LC_MESSAGES/: messages.po
data/locale/eo/LC_MESSAGES/: messages.po
data/locale/es/LC_MESSAGES/: messages.mo  messages.po  messages.po~
data/locale/et/LC_MESSAGES/: messages.po
data/locale/eu/LC_MESSAGES/: messages.po
data/locale/fa/LC_MESSAGES/: messages.po
data/locale/fi/LC_MESSAGES/: messages.po
data/locale/fil/LC_MESSAGES/: messages.po
data/locale/fo/LC_MESSAGES/: messages.po
data/locale/fr/LC_MESSAGES/: messages.mo  messages.po
data/locale/fr_CA/LC_MESSAGES/: messages.po
data/locale/frp/LC_MESSAGES/: messages.po
data/locale/fy/LC_MESSAGES/: messages.po
data/locale/ga/LC_MESSAGES/: messages.po
data/locale/gd/LC_MESSAGES/: messages.po
data/locale/gl/LC_MESSAGES/: messages.po
data/locale/gu/LC_MESSAGES/: messages.po
data/locale/he/LC_MESSAGES/: messages.po
data/locale/hi/LC_MESSAGES/: messages.po
data/locale/hr/LC_MESSAGES/: messages.po
data/locale/ht/LC_MESSAGES/: messages.po
data/locale/hu/LC_MESSAGES/: messages.po
data/locale/hy/LC_MESSAGES/: messages.po
data/locale/ia/LC_MESSAGES/: messages.po
data/locale/id/LC_MESSAGES/: messages.po
data/locale/is/LC_MESSAGES/: messages.po
data/locale/it/LC_MESSAGES/: messages.mo  messages.po
data/locale/ja/LC_MESSAGES/: messages.po
data/locale/ka/LC_MESSAGES/: messages.po
data/locale/kk/LC_MESSAGES/: messages.po
data/locale/kl/LC_MESSAGES/: messages.po
data/locale/km/LC_MESSAGES/: messages.po
data/locale/kn/LC_MESSAGES/: messages.po
data/locale/ko/LC_MESSAGES/: messages.po
data/locale/ku/LC_MESSAGES/: messages.po
data/locale/kw/LC_MESSAGES/: messages.po
data/templates/: Makefile.am  about.tpl  activesync.tpl  addrdeleted.tpl  addresslist.tpl  addrlistall.tpl  admindeleted.tpl  adminlistall.tpl  codefusion.tpl  createuser.tpl  custom.css.tpl  deliver.tpl  distlistall.tpl  distlistdeleted.tpl  domainmaintainerlistall.tpl  erfrakon.tpl  formcontainer.tpl  forward.tpl  intevation.tpl  kdab.tpl  kde.tpl  kolab.tpl  kolabsystems.tpl  login.tpl  maintainerdeleted.tpl  maintainerlistall.tpl  page-ajax.tpl  page.tpl  settings.tpl  sfdeleted.tpl  sflistall.tpl  skolabgroupware.tpl  systemaliasnagscreen.tpl  technology.tpl  userdeleted.tpl  userlistall.tpl  userlisterror.tpl  vacation.tpl  versions.tpl  welcome-admin.tpl  (+4 more)
htdocs/: Makefile.am  Makefile.in  custom.css  index.php  logout.php  print.css  screen.css  style.css
htdocs/about/: Makefile.am  Makefile.in  codefusion.php  erfrakon.php  index.php  intevation.php  kdab.php  kde.php  kolabsystems.php  skolabgroupware.php  technology.php  versions.php
htdocs/addressbook/: Makefile.in  addr.php  index.php
htdocs/administrator/: Makefile.in  admin.php  index.php
htdocs/distributionlist/: Makefile.am  Makefile.in  index.php  list.php
htdocs/domainmaintainer/: Makefile.am  Makefile.in  domainmaintainer.php  index.php
htdocs/images/: Makefile.am  Makefile.in  sliding-tabs.js
htdocs/maintainer/: Makefile.in  index.php  maintainer.php
htdocs/settings/: Makefile.am  Makefile.in  index.php
htdocs/sharedfolder/: Makefile.am  Makefile.in  index.php  sf.php
htdocs/user/: Makefile.am  Makefile.in  activesync.php  deliver.php  forward.php  index.php  user.php  vacation.php
www/admin/: Makefile.am  custom.css  index.php  index.php.in  logout.php  logout.php.in  style.css
www/admin/about/: Makefile.am  index.php  kolabsystems.php
www/admin/addressbook/: Makefile.am  addr.php  addr.php.in  index.php  index.php.in
www/admin/administrator/: Makefile.am  admin.php  admin.php.in  index.php  index.php.in
www/admin/distributionlist/: Makefile.am  index.php  index.php.in  list.php  list.php.in
www/admin/domainmaintainer/: Makefile.am  domainmaintainer.php  domainmaintainer.php.in  index.php  index.php.in
www/admin/images/: Makefile.am
www/admin/kolab/: Makefile.am  codefusion.php  codefusion.php.in  erfrakon.php  erfrakon.php.in  index.php  index.php.in  intevation.php  intevation.php.in  kdab.php  kdab.php.in  kde.php  kde.php.in  kolabsystems.php  technology.php  versions.php  versions.php.in
www/admin/maintainer/: Makefile.am  index.php  index.php.in  maintainer.php  maintainer.php.in
www/admin/service/: index.php  index.php.in
www/admin/settings/: Makefile.am  index.php  index.php.in
www/admin/sharedfolder/: Makefile.am  index.php  index.php.in  sf.php  sf.php.in
www/admin/user/: Makefile.am  activesync.php  deliver.php  deliver.php.in  forward.php  forward.php.in  index.php  index.php.in  user.php  user.php.in  vacation.php  vacation.php.in
(+206 files in other folders)
