NULL =

SUBDIRS = about user administrator addressbook images settings distributionlist sharedfolder domainmaintainer maintainer

WSKOLAB_FILES =					\
	index.php				\
	logout.php				\
	print.css				\
	screen.css				\
	favicon.ico				\
	favicon.png				\
	$(NULL)

wskolabdir = $(webserver_document_root)
wskolab_DATA = $(WSKOLAB_FILES)
