NULL =

SMARTY_TEMPLATES =			\
	maintainerdeleted.tpl		\
	kde.tpl				\
	addrdeleted.tpl			\
	userdeleted.tpl			\
	sfdeleted.tpl			\
	distlistdeleted.tpl		\
	addresslist.tpl			\
	sflistall.tpl			\
	erfrakon.tpl			\
	codefusion.tpl			\
	adminlistall.tpl		\
	login.tpl			\
	maintainerlistall.tpl		\
	domainmaintainerlistall.tpl	\
	about.tpl			\
	addrlistall.tpl			\
	forward.tpl			\
	deliver.tpl			\
	distlistall.tpl			\
	kdab.tpl			\
	userlistall.tpl			\
	userlisterror.tpl		\
	settings.tpl			\
	welcome.tpl			\
	systemaliasnagscreen.tpl	\
	intevation.tpl			\
	vacation.tpl			\
	createuser.tpl			\
	formcontainer.tpl		\
	admindeleted.tpl		\
	custom.css.tpl			\
	$(NULL)

phptemplatesdir = $(smarty_templates_dir)
phptemplates_DATA =			\
	$(SMARTY_TEMPLATES)		\
	page.tpl			\
	versions.tpl			\
	$(NULL)
