NULL =

SMARTY_TEMPLATES =			\
	about.tpl			\
	addrdeleted.tpl			\
	addresslist.tpl			\
	addrlistall.tpl			\
	admindeleted.tpl		\
	adminlistall.tpl		\
	codefusion.tpl			\
	createuser.tpl			\
	custom.css.tpl			\
	deliver.tpl			\
	distlistall.tpl			\
	distlistdeleted.tpl		\
	domainmaintainerlistall.tpl	\
	erfrakon.tpl			\
	formcontainer.tpl		\
	forward.tpl			\
	intevation.tpl			\
	kdab.tpl			\
	kde.tpl				\
	kolabsystems.tpl		\
	login.tpl			\
	maintainerdeleted.tpl		\
	maintainerlistall.tpl		\
	settings.tpl			\
	sfdeleted.tpl			\
	sflistall.tpl			\
	systemaliasnagscreen.tpl	\
	technology.tpl			\
	userdeleted.tpl			\
	userlistall.tpl			\
	userlisterror.tpl		\
	vacation.tpl			\
	welcome-admin.tpl		\
	welcome-domain-maintainer.tpl	\
	welcome-maintainer.tpl		\
	welcome.tpl			\
	welcome-user.tpl		\
	$(NULL)

phptemplatesdir = $(smarty_templates_dir)
phptemplates_DATA =			\
	$(SMARTY_TEMPLATES)		\
	page.tpl			\
	versions.tpl			\
	$(NULL)
