NULL =

WSABOUT_FILES =				\
	erfrakon.php			\
	index.php			\
	intevation.php			\
	codefusion.php			\
	kdab.php			\
	kde.php				\
	kolabsystems.php		\
	technology.php			\
	versions.php			\
	$(NULL)

wskolabdir = $(webserver_document_root)
wsaboutdir = $(wskolabdir)/about
wsabout_DATA = $(WSABOUT_FILES)
