NULL =

WSIMAGES_FILES =				\
    alarm.png					\
    body.jpg					\
    book2.png					\
    book.png					\
    bottom.png					\
    codefusion.png				\
    CONTACT.png					\
    dialog-information.png			\
    erfrakon.png				\
    EVENT.png					\
    eye_pencil.png				\
    footer.png					\
    f.png					\
    icon_grey_logout.png			\
    identica.png				\
    intevation_logo.png				\
    irc.png					\
    kdab.png					\
    kde.png					\
    kolab_logo.png				\
    kolab.png					\
    kolabsystems_logo.png			\
    line.png					\
    listitem.png				\
    list.png					\
    logo.png					\
    MAIL.png					\
    menu.jpg					\
    NOTES.png					\
    office-address-book.png			\
    phone.png					\
    preferences-system-network-sharing.png	\
    preferences-system.png			\
    resource-group.png				\
    root.jpg					\
    skolab-webadmin-logo-login.png		\
    skolab-webadmin-logo.png			\
    sync.png					\
    system-users.png				\
    TASKS.png					\
    twitter.png					\
    ul-icon.png					\
    user-icon-1-20x20.gif			\
    $(NULL)

wskolabdir = $(webserver_document_root)
wsimagesdir = $(wskolabdir)/images
dist_wsimages_DATA = $(WSIMAGES_FILES)
