NULL =

WSIMAGES_FILES =				\
    body.jpg					\
    book2.png					\
    book.png					\
    dialog-information.png			\
    eye_pencil.png				\
    footer.png					\
    icon_grey_logout.png			\
    identica.png				\
    irc.png					\
    line.png					\
    listitem.png				\
    list.png					\
    menu.jpg					\
    office-address-book.png			\
    preferences-system-network-sharing.png	\
    preferences-system.png			\
    resource-group.png				\
    root.jpg					\
    skolab-groupware_logo.png			\
    skolab-webadmin-logo-login.png		\
    skolab-webadmin-logo.png			\
    system-users.png				\
    ul-icon.png					\
    user-icon-1-20x20.gif			\
    $(NULL)

wskolabdir = $(webserver_document_root)
wsimagesdir = $(wskolabdir)/images
dist_wsimages_DATA = $(WSIMAGES_FILES)
