NULL =

SUBDIRS = about user administrator addressbook images settings distributionlist sharedfolder domainmaintainer maintainer

WSKOLAB_FILES =					\
	index.php				\
	logout.php				\
	custom.css				\
	print.css				\
	screen.css				\
	style.css				\
	favicon.ico				\
	favicon.png				\
	$(NULL)

wskolabdir = $(webserver_document_root)$(webadminui_alias)
wskolab_DATA = $(WSKOLAB_FILES)
