NULL =

LIB_KOLABADMIN_INCLUDE_FILES =		\
    auth.class.php			\
    authenticate.php			\
    config.php				\
    debug.php				\
    form.class.php			\
    function.kolabsync.php		\
    headers.php				\
    ldap.class.php			\
    locale.php				\
    menu.php				\
    mysmarty.php			\
    passwd.php				\
    Sieve.php				\
    $(NULL)

libkolabadminincludedir = $(phplib_dir)/skolab/admin/include
libkolabadmininclude_DATA = $(LIB_KOLABADMIN_INCLUDE_FILES)
